# DataMCPServerAgent

./: .env.template  .gitignore  .pre-commit-config.yaml  COMMIT_MESSAGE.md  COMPLETION_CHECKLIST.md  Dockerfile  LICENSE  PIPELINE_SETUP.md  README.md  README_ENTERPRISE.md  README_RESEARCH_ASSISTANT.md  auth_system.py  cloudflare_agent_server.py  cloudflare_mcp_integration.py  contributing.md  docker-compose.yml  durable_objects_agent.py  enhanced_agent_example.py  fix_imports.py  install_dependencies.py  integrated_agent_server.py  main.py  mcp_inspector.py  mkdocs.yml  mock_research_reports_agent.py  pyproject.toml  pyproject_improved.toml  quick_start.py  quick_test.py  requirements-api.txt  requirements-ci.txt  requirements.txt  run_new_architecture.py  run_tests.py  secure_agent_server.py  secure_config.py  secure_mcp_client.py  self_hosting_config.py  setup.py  simple_crypto_test.py  (+9 more)
.github/workflows/: ci.yml  deploy.yml  docs.yml  enhanced-testing.yml  pages.yml  pylint.yml  security.yml
agent-ui/: eslint.config.mjs  next.config.ts  package.json  simple-server.js  tailwind.config.ts  test-server.js  wrangler.toml
agent-ui/src/: store.ts
agent-ui/test-app/: package-lock.json
app/: __init__.py  main.py  main_consolidated.py  main_improved.py  main_simple_consolidated.py
app/api/: __init__.py  consolidated_server.py  dependencies.py  rl_endpoints.py  server_improved.py  simple_consolidated_server.py
app/application/: __init__.py
app/cli/: consolidated_interface.py  interface_improved.py  simple_consolidated_interface.py
app/cloud/: cloud_integration.py
app/core/: config.py  config_improved.py  dependencies.py  exceptions_improved.py  logging.py  logging_improved.py  rl_integration.py  simple_config.py  simple_logging.py
app/domain/: __init__.py
configs/: bright_data_enhanced_config.json  pentest_config.yaml
docs/: ADVANCED_FEATURES_SETUP.md  ARCHITECTURE_IMPLEMENTATION_SUMMARY.md  BRAND_AGENT_PHASE1_COMPLETION_REPORT.md  BRAND_AGENT_PHASE2_COMPLETION_REPORT.md  BRAND_AGENT_PLATFORM_FINAL_REPORT.md  BRIGHT_DATA_ENHANCED_SETUP.md  BRIGHT_DATA_ENHANCEMENT_REPORT.md  CI_CD_IMPROVEMENTS.md  CODEBASE_IMPROVEMENT_PLAN.md  CODEBASE_IMPROVEMENT_SUMMARY.md  COMMIT_MESSAGE.md  COMPLETION_CHECKLIST.md  CONSOLIDATION_PLAN.md  CONSOLIDATION_SUCCESS_REPORT.md  DOCUMENT_PROCESSING_PIPELINE.md  ENHANCED_FEATURES_README.md  ENHANCED_RESEARCH_ASSISTANT.md  ENTERPRISE_TRAINING_COMPLETE.md  ENTERPRISE_TRAINING_INTEGRATION_COMPLETE.md  FUN-42_COMMIT_MESSAGE.md  FUN-42_COMPLETION_CHECKLIST.md  FUN-44_COMMIT_MESSAGE.md  FUN-44_COMPLETION_CHECKLIST.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPROVED_CODE_STRUCTURE_REPORT.md  INFINITE_AGENTIC_LOOP.md  INFINITE_AGENTIC_LOOP_IMPLEMENTATION_REPORT.md  INSTITUTIONAL_TRADING_SYSTEM.md  PENETRATION_TESTING_SYSTEM.md  PENTEST_IMPLEMENTATION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PHASE_1_COMPLETION_REPORT.md  PHASE_1_FINAL_SUMMARY.md  PHASE_1_SUCCESS_REPORT.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_2_FIXES_REPORT.md  PHASE_2_LLM_PIPELINES_REPORT.md  PHASE_2_PLAN.md  PHASE_2_PROGRESS_REPORT.md  (+52 more)
examples/: advanced_agent_example.py  advanced_enhanced_agent_example.py  advanced_enhanced_example.py  advanced_error_analysis_example.py  advanced_features_example.py  advanced_rl_decision_making_example.py  advanced_rl_features_example.py  algorithmic_trading_demo.py  basic_agent_example.py  complete_advanced_rl_example.py  complete_integration_example.py  complete_pipeline_example.py  custom_tool_example.py  data_pipeline_example.py  demo_spec.yaml  distributed_memory_example.py  distributed_memory_real_world_example.py  document_processing_example.py  enhanced_agent_example.py  enhanced_bright_data_example.py  enhanced_capabilities_example.py  enhanced_distributed_memory_example.py  enhanced_error_recovery_example.py  enterprise_rl_system_demo.py  enterprise_training_demo.py  hierarchical_rl_example.py  infinite_loop_spec.md  institutional_trading_example.py  knowledge_graph_example.py  modern_deep_rl_example.py  multi_agent_learning_example.py  optimized_rl_demo.py  orchestration_example.py  pentest_example.py  phase2_market_data_analytics_example.py  phase3_ai_ml_integration_example.py  phase6_advanced_features_demo.py  product_comparison_example.py  reinforcement_learning_example.py  research_assistant_example.py  (+8 more)
kubernetes/: deployment.yaml  namespace.yaml
monitoring/: README.md  __init__.py  requirements.txt
scripts/: agent_server.py  auth_system.py  cloudflare_agent_server.py  cloudflare_mcp_integration.py  cloudflare_workflows.py  debug_auth.py  demo_phase1.py  demo_phase2.py  demo_phase2_complete.py  demo_phase3.py  demo_phase3_stage2.py  demo_streaming.py  deploy.py  durable_objects_agent.py  email_integration.py  enhanced_agent_example.py  enhanced_integrated_server.py  get_api_keys.py  install_basic.py  install_dependencies.py  install_pipeline_deps.py  install_semantic_agents.py  integrated_agent_server.py  main.py  mcp_inspector.py  mock_research_reports_agent.py  monitoring_demo.py  quick_fix.py  quick_install_uv.py  quick_start.py  quick_test.py  research_reports_runner.py  result_processors.py  run_api.py  run_infinite_loop.py  run_new_architecture.py  run_orchestration_tests.py  run_tests.py  secure_agent_server.py  secure_config.py  (+13 more)
src/: __init__.py
tests/: __init__.py  simple_brand_agent_test.py  simple_phase2_test.py  simple_phase3_test.py  test_agent_architecture.py  test_basic.py  test_basic_functionality.py  test_brand_agent_phase1.py  test_brand_agent_phase2.py  test_brand_agent_phase3.py  test_bright_data_enhanced.py  test_ci_fixes.py  test_distributed_memory_real_world.py  test_document_pipeline.py  test_error_recovery.py  test_imports.py  test_learning_capabilities.py  test_memory_persistence.py  test_modern_deep_rl.py  test_orchestration_system.py  test_phase3_integration.py  test_runner.py  test_semantic_agents.py  test_simple.py  test_system_integration.py  test_trading_infinite_loop.py
tutorials/: README.md  __init__.py  requirements.txt
worker/: agent-worker.js  wrangler.toml
(+495 files in other folders)
